tests/NormalTests/paczka1/small_fuzzy/32697995.err
Error in line 10: VxZOHXoz S100 30,2
Error in line 13: jF9Hm A869 98,0
